--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -708,166 +708,6 @@ li {
   position: relative;
   z-index: 9999;
 }
-.artist {
-  min-height: 100vh;
-  overflow: hidden;
-}
-.artist-background {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  position: absolute;
-  z-index: 100;
-  overflow: hidden;
-}
-.artist-background .page-heading {
-  height: 100%;
-  width: 100%;
-  left: 3vw;
-  position: absolute;
-  overflow: hidden;
-}
-.artist-background .page-heading .artist-background__right {
-  width: 43vw;
-  position: absolute;
-  right: -25vw;
-  top: -26vw;
-  overflow: hidden;
-  transform: rotate(-9.32deg);
-}
-.artist-background .page-heading .svg-curve {
-  width: 35vw;
-  height: auto;
-  position: absolute;
-  top: 8.5vw;
-  right: -11.5vw;
-}
-.artist-background .page-heading path {
-  fill: transparent;
-  width: 10vw;
-  height: auto;
-}
-.artist-background .page-heading textPath {
-  font-family: "Cremona", sans-serif;
-  font-size: 3.75em;
-  font-weight: 400;
-  font-size: 3em;
-  letter-spacing: 0.15em;
-  white-space: nowrap;
-  fill: #4A4F4F;
-}
-.artist-background__left {
-  height: fit-content;
-  bottom: 20%;
-}
-.artist-profile {
-  padding: 3% 10%;
-  width: 100%;
-  position: relative;
-  z-index: 500;
-}
-.artist-profile__top {
-  display: flex;
-}
-.artist-profile .top-left {
-  display: flex;
-  width: 80%;
-}
-.artist-profile .top-left__left {
-  width: 15vw;
-  min-height: 13vw;
-  display: flex;
-  flex-direction: column;
-}
-.artist-profile .top-left__left .artist-img {
-  width: 10vw;
-  padding-bottom: 5em;
-}
-.artist-profile .top-left__left .fa-circle {
-  color: #F4794F;
-}
-.artist-profile .top-left__left .fa-stack {
-  cursor: pointer;
-  padding: 0;
-  padding-right: 3vw;
-  text-align: left;
-}
-.artist-profile .top-left__right {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  padding-left: 2em;
-  min-height: 13vw;
-  justify-content: space-between;
-  overflow: hidden;
-}
-.artist-profile .top-left__right .edit-profile-btn {
-  background: transparent;
-  border: none;
-  font-size: 1em;
-  padding-bottom: 6em;
-  color: #D5E0A8;
-  width: fit-content;
-  cursor: pointer;
-}
-.artist-profile .top-left__right .edit-profile-btn :hover {
-  color: #F4794F;
-}
-.artist-profile .top-left__right .edit-profile-btn :hover .fa-pen-to-square {
-  color: #fff;
-}
-.artist-profile .top-left__right .edit-profile-btn .fa-pen-to-square {
-  color: #4A4F4F;
-}
-.artist-profile .top-left__right .artist-name {
-  font-family: "Cremona", sans-serif;
-  font-size: 3.75em;
-  font-weight: 400;
-  color: #4A4F4F;
-  padding-bottom: 1em;
-}
-.artist-profile .top-left__right .artist-about {
-  font-family: "Assistant", sans-serif;
-  font-size: 1.5em;
-  font-weight: 300;
-  line-height: 1.6em;
-
-  color: #4A4F4F;
-}
-.footer-lower__right .footer-nav__item {
-  cursor: pointer;
-}
-.footer-lower__right .footer-nav__item:hover {
-  font-weight: 600;
-}
-.footer-bottom {
-  background-color: #EFEFEB;
-  display: flex;
-  justify-content: space-between;
-  padding: 5em 8em;
-  font-family: "Assistant", sans-serif;
-  font-size: 1.5em;
-  font-weight: 300;
-  line-height: 1.6em;
-  font-size: 1.5em;
-  color: #4A4F4F;
-  font-weight: 400;
-}
-.footer-bottom .socials {
-  display: flex;
-  color: white;
-}
-.footer-bottom .socials-container {
-  background-color: #F4794F;
-  margin-left: 1em;
-  line-height: 2em;
-  width: 2em;
-  border-radius: 2em;
-  text-align: center;
-  cursor: pointer;
-}
 
 .modal__background {
   background: url("../img/form-background-crop.png");
@@ -919,51 +759,6 @@ li {
 }
 .modal-subtitle {
   font-size: 2rem;
-  color: #4A4F4F;
-}
-.artist-profile .artist-profile__bottom {
-  margin-top: 7em;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 2em;
-  position: relative;
-  z-index: 600;
-}
-.artist-profile .artist-profile__bottom .artist-products {
-  width: fit-content;
-  overflow-x: scroll;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  gap: 4em;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-}
-.artist-profile .artist-profile__bottom .artist-products::-webkit-scrollbar {
-  display: none;
-}
-.artist-profile .artist-profile__bottom .card .edit-btns {
-  width: 100%;
-  padding: 2em;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  position: absolute;
-}
-.artist-profile .artist-profile__bottom .card .fa-stack {
-  cursor: pointer;
-  margin-bottom: 0.5em;
-}
-.artist-profile .artist-profile__bottom .card .fa-stack .fa-circle {
-  color: #D5E0A8;
-}
-.artist-profile .artist-profile__bottom .card .fa-stack .circle-trash {
-  color: #F4794F;
-}
-.artist-profile .artist-profile__bottom .card .fa-stack .fa-pen-to-square {
-  color: #4A4F4F;
 }
 
 @media screen and (min-width: 1500px) {
@@ -982,15 +777,9 @@ li {
   align-items: center;
   align-content: center;
   justify-content: center;
-  position: relative;
-  z-index: 1000;
 }
-
-.footer-upper {
-  background-image: url("/frontend/img/footer-img.png");
-  background-size: 120%;
-  background-position: 0% 35%;
-  padding: 8em;
+.form__input {
+  width: 80%;
   display: flex;
   flex-direction: column;
   gap: 0.5em;
@@ -1059,12 +848,6 @@ li {
   background: #EFEFEB;
   height: 4.5vh;
   width: 10vw;
-  }
-.footer-upper__btn-container :hover {
-  background-color: #D5E0A8;
-  color: #4A4F4F;
-}
-.footer-lower {
   display: flex;
   align-items: center;
   align-content: center;
@@ -1262,4 +1045,291 @@ li {
 .upload__box {
   display: flex;
   flex-direction: row;
+}
+
+.artist {
+  min-height: 100vh;
+  overflow: hidden;
+}
+.artist-background {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  position: absolute;
+  z-index: 100;
+  overflow: hidden;
+}
+.artist-background .page-heading {
+  height: 100%;
+  width: 100%;
+  left: 3vw;
+  position: absolute;
+  overflow: hidden;
+}
+.artist-background .page-heading .artist-background__right {
+  width: 43vw;
+  position: absolute;
+  right: -25vw;
+  top: -26vw;
+  overflow: hidden;
+  transform: rotate(-9.32deg);
+}
+.artist-background .page-heading .svg-curve {
+  width: 35vw;
+  height: auto;
+  position: absolute;
+  top: 8.5vw;
+  right: -11.5vw;
+}
+.artist-background .page-heading path {
+  fill: transparent;
+  width: 10vw;
+  height: auto;
+}
+.artist-background .page-heading textPath {
+  font-family: "Cremona", sans-serif;
+  font-size: 3.75em;
+  font-weight: 400;
+  font-size: 3em;
+  letter-spacing: 0.15em;
+  white-space: nowrap;
+  fill: #4A4F4F;
+}
+.artist-background__left {
+  height: fit-content;
+  bottom: 20%;
+}
+.artist-profile {
+  padding: 3% 10%;
+  width: 100%;
+  position: relative;
+  z-index: 500;
+}
+.artist-profile__top {
+  display: flex;
+}
+.artist-profile .top-left {
+  display: flex;
+  width: 80%;
+}
+.artist-profile .top-left__left {
+  width: 15vw;
+  min-height: 13vw;
+  display: flex;
+  flex-direction: column;
+}
+.artist-profile .top-left__left .artist-img {
+  width: 10vw;
+  padding-bottom: 5em;
+}
+.artist-profile .top-left__left .fa-circle {
+  color: #F4794F;
+}
+.artist-profile .top-left__left .fa-stack {
+  cursor: pointer;
+  padding: 0;
+  padding-right: 3vw;
+  text-align: left;
+}
+.artist-profile .top-left__right {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding-left: 2em;
+  min-height: 13vw;
+  justify-content: space-between;
+  overflow: hidden;
+}
+.artist-profile .top-left__right .edit-profile-btn {
+  background: transparent;
+  border: none;
+  font-size: 1em;
+  padding-bottom: 6em;
+  color: #D5E0A8;
+  width: fit-content;
+  cursor: pointer;
+}
+.artist-profile .top-left__right .edit-profile-btn :hover {
+  color: #F4794F;
+}
+.artist-profile .top-left__right .edit-profile-btn :hover .fa-pen-to-square {
+  color: #fff;
+}
+.artist-profile .top-left__right .edit-profile-btn .fa-pen-to-square {
+  color: #4A4F4F;
+}
+.artist-profile .top-left__right .artist-name {
+  font-family: "Cremona", sans-serif;
+  font-size: 3.75em;
+  font-weight: 400;
+  color: #4A4F4F;
+  padding-bottom: 1em;
+}
+.artist-profile .top-left__right .artist-about {
+  font-family: "Assistant", sans-serif;
+  font-size: 1.5em;
+  font-weight: 300;
+  line-height: 1.6em;
+  color: #4A4F4F;
+}
+.artist-profile .artist-profile__bottom {
+  margin-top: 7em;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 2em;
+  position: relative;
+  z-index: 600;
+}
+.artist-profile .artist-profile__bottom .artist-products {
+  width: fit-content;
+  overflow-x: scroll;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  gap: 4em;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.artist-profile .artist-profile__bottom .artist-products::-webkit-scrollbar {
+  display: none;
+}
+.artist-profile .artist-profile__bottom .card .edit-btns {
+  width: 100%;
+  padding: 2em;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  position: absolute;
+}
+.artist-profile .artist-profile__bottom .card .fa-stack {
+  cursor: pointer;
+  margin-bottom: 0.5em;
+}
+.artist-profile .artist-profile__bottom .card .fa-stack .fa-circle {
+  color: #D5E0A8;
+}
+.artist-profile .artist-profile__bottom .card .fa-stack .circle-trash {
+  color: #F4794F;
+}
+.artist-profile .artist-profile__bottom .card .fa-stack .fa-pen-to-square {
+  color: #4A4F4F;
+}
+
+.footer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  z-index: 1000;
+}
+.footer-upper {
+  background-image: url("/frontend/img/footer-img.png");
+  background-size: 120%;
+  background-position: 0% 35%;
+  padding: 8em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.footer-upper__cta {
+  color: #EFEFEB;
+  font-family: "Assistant", sans-serif;
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: 2.5em;
+  letter-spacing: 0.05em;
+  text-align: center;
+  padding-bottom: 1.5em;
+}
+.footer-upper__btn-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.footer-upper__btn-container .sell-work-btn {
+  justify-self: center;
+  width: fit-content;
+  font-family: "Assistant", sans-serif;
+  font-size: 1.5em;
+  font-weight: 600;
+  text-transform: uppercase;
+  background-color: #F4794F;
+  color: white;
+  border: none;
+  border-radius: none;
+  padding: 0.75em 2em;
+  cursor: pointer;
+}
+.footer-upper__btn-container :hover {
+  background-color: #D5E0A8;
+  color: #4A4F4F;
+}
+.footer-lower {
+  display: flex;
+  justify-content: space-between;
+  padding: 5em 8em;
+  background-color: #EFEFEB;
+  border-bottom: solid 1px #C3C3B7;
+}
+.footer-lower__left .footer-logo__display {
+  font-family: "Cremona", sans-serif;
+  font-size: 3.75em;
+  font-weight: 400;
+  font-size: 3em;
+  color: #4A4F4F;
+}
+.footer-lower__left .footer-logo__tag {
+  font-family: "Assistant", sans-serif;
+  font-size: 1.8em;
+  font-weight: 400;
+  font-weight: 300;
+  color: #4A4F4F;
+}
+.footer-lower__right {
+  text-align: right;
+  font-family: "Assistant", sans-serif;
+  font-size: 1.5em;
+  font-weight: 300;
+  line-height: 1.6em;
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 1.25em;
+  color: #4A4F4F;
+}
+.footer-lower__right .footer-nav__item {
+  cursor: pointer;
+}
+.footer-lower__right .footer-nav__item:hover {
+  font-weight: 600;
+}
+.footer-bottom {
+  background-color: #EFEFEB;
+  display: flex;
+  justify-content: space-between;
+  padding: 5em 8em;
+  font-family: "Assistant", sans-serif;
+  font-size: 1.5em;
+  font-weight: 300;
+  line-height: 1.6em;
+  font-size: 1.5em;
+  color: #4A4F4F;
+  font-weight: 400;
+}
+.footer-bottom .socials {
+  display: flex;
+  color: white;
+}
+.footer-bottom .socials-container {
+  background-color: #F4794F;
+  margin-left: 1em;
+  line-height: 2em;
+  width: 2em;
+  border-radius: 2em;
+  text-align: center;
+  cursor: pointer;
 }
